@@ -38,6 +38,8 @@
 <p>2015-01-18  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/histogram.c (WriteHISTOGRAMImage): Avoid possible divide
+by zero exception.  Resolves Coverity CID 10107.</li>
 <li>magick/error.c (MagickFatalError): Document that
 MagickFatalError() is not supposed to return (program must quit)
 and add GCC/Clang hints to that effect.</li>
